app/src/main/java/com/example/truckercore/model/errors/infra/contracts/InfraErrorCode.kt
package com.example.truckercore.model.errors.infra.contracts

interface InfraErrorCode